src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

body {
  transition: all 0.5s ease-in-out;
  scrollbar-width: thin; /* Largeur de la barre de défilement */
  scrollbar-color: #888 #f1f1f1; /* Couleur de la poignée de défilement et couleur de fond de la piste de défilement */
  /* Pour Firefox */
  background-image: linear-gradient(
      12deg,
      rgba(193, 193, 193, 0.05) 0%,
      rgba(193, 193, 193, 0.05) 2%,
      rgba(129, 129, 129, 0.05) 2%,
      rgba(129, 129, 129, 0.05) 27%,
      rgba(185, 185, 185, 0.05) 27%,
      rgba(185, 185, 185, 0.05) 66%,
      rgba(83, 83, 83, 0.05) 66%,
      rgba(83, 83, 83, 0.05) 100%
    ),
    linear-gradient(
      321deg,
      rgba(240, 240, 240, 0.05) 0%,
      rgba(240, 240, 240, 0.05) 13%,
      rgba(231, 231, 231, 0.05) 13%,
      rgba(231, 231, 231, 0.05) 34%,
      rgba(139, 139, 139, 0.05) 34%,
      rgba(139, 139, 139, 0.05) 71%,
      rgba(112, 112, 112, 0.05) 71%,
      rgba(112, 112, 112, 0.05) 100%
    ),
    linear-gradient(
      236deg,
      rgba(189, 189, 189, 0.05) 0%,
      rgba(189, 189, 189, 0.05) 47%,
      rgba(138, 138, 138, 0.05) 47%,
      rgba(138, 138, 138, 0.05) 58%,
      rgba(108, 108, 108, 0.05) 58%,
      rgba(108, 108, 108, 0.05) 85%,
      rgba(143, 143, 143, 0.05) 85%,
      rgba(143, 143, 143, 0.05) 100%
    ),
    linear-gradient(
      96deg,
      rgba(53, 53, 53, 0.05) 0%,
      rgba(53, 53, 53, 0.05) 53%,
      rgba(44, 44, 44, 0.05) 53%,
      rgba(44, 44, 44, 0.05) 82%,
      rgba(77, 77, 77, 0.05) 82%,
      rgba(77, 77, 77, 0.05) 98%,
      rgba(8, 8, 8, 0.05) 98%,
      rgba(8, 8, 8, 0.05) 100%
    ),
    linear-gradient(334deg, hsl(247, 0%, 2%), hsl(247, 0%, 2%));
}
/* Pour Webkit (Safari et Chrome) */
::-webkit-scrollbar {
  width: 4px; /* Largeur de la barre de défilement */
}

::-webkit-scrollbar-track {
  background: none; /* Couleur de fond de la piste de défilement */
}

::-webkit-scrollbar-thumb {
  background: #363636; /* Couleur de la poignée de défilement */
  border-radius: 10px;
}

::-webkit-scrollbar-thumb:hover {
  background: #151515; /* Couleur de la poignée de défilement au survol */
}

.all-initial {
  all: initial;
}

html {
  transition: all 0.5s ease-in-out;
  scroll-behavior: smooth !important;
}

.fade-enter {
  opacity: 0;
}

.fade-enter-active {
  opacity: 1;
  transition: opacity 500ms;
}

.fade-exit {
  opacity: 1;
}

.fade-exit-active {
  opacity: 0;
  transition: opacity 500ms;
}

.hover-text-html-5:hover {
  color: #e34c26;
}

.hover-text-css-3:hover {
  color: #264de4;
}

.hover-text-react:hover {
  color: #61dbfb;
}

.hover-text-vue:hover {
  color: #41b883;
}

.hover-text-wordpress:hover {
  color: #00749c;
}

.hover-text-shopify:hover {
  color: #96bf48;
}

.hover-text-database:hover {
  color: #00758f;
}

.hover-text-github:hover {
  color: #6e5494;
}

.hover-text-reddit:hover {
  color: #ff5700;
}
.hover-text-python:hover {
  color: #ffde57;
}

.hover-text-php:hover {
  color: #777bb3;
}

.hover-text-javascript:hover {
  color: #f0db4f;
}

